# Faial-MCP

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CLAUDE_DESKTOP_LIMITATIONS.md  CLAUDE_DESKTOP_SETUP.md  DOCKER.md  Dockerfile  Faial-Optimal-Usage-Findings.md  GEMINI.md  HOW_TO_RUN.md  MCP_CONFIG_EXAMPLES.md  MCP_CONFIG_GUIDE.md  README.md  claude_desktop_config.json  deploy.sh  docker-compose.yml  faial-client.js  netlify.toml  package-lock.json  package.json  pyproject.toml  railway-deploy.md  test-deployment-fixed.ps1  test-deployment.ps1  test-docker.ps1  test-docker.sh  tsconfig.json  vercel.json
.claude/: settings.local.json
active_benchmarking/: binomialOptions_datarace.cu  bitonicSort.cu  bitonicSort_datarace.cu  computeBucketPositions.cu  convolution2D.cu  convolution2D_datarace.cu  convolutionColumns_datarace.cu  convolutionRows_datarace.cu  dwtHaar1D.cu  dwtHaar1D_datarace.cu  example.cu  histogram256.cu  histogram256_datarace.cu  imageDenoising_nlm2_datarace.cu  matrixMul_datarace.cu  matrixMultiplyTiled_datarace.cu  nbody_datarace.cu  prefixSum.cu  prefixSum_datarace.cu  reduce3_datarace.cu  reduce4_datarace.cu  reduce5_datarace.cu  reduce6_datarace.cu  reduceValue.cu  reduction_datarace.cu  reverseArray_datarace.cu  scalarProd_datarace.cu  scan_datarace.cu  sobelShared_datarace.cu  sortBuckets.cu  transpose_datarace.cu
api/: faialRunner.js  index.js
docs/: GETTING_STARTED.md  HOW_TO_RUN.md  claude-desktop-config.json  claude_desktop_config_WINDOWS.json  claude_desktop_config_hosted.json
faial_mcp_server/: __init__.py  server.py
src/: index.ts  (+1 more)
(+263 files in other folders)
