[project]
name = "faial-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server exposing Faial analysis tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.14.0",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
]

[project.scripts]
faial-mcp-server = "faial_mcp_server.server:main"

[tool.ruff]
target-version = "py310"
line-length = 100
